# pysamosa

./: .flake8  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  update_env.py
.github/workflows/: docs.yml  pylint.yml
docs/: api.rst  conf.py  index.md
docs/source/: conf.py  index.rst
envs/: pysamosa.yaml
pysamosa/: scratch.ipynb
pysamosa/data_calculations/: bootstrap.py  calibrate.py  flag.py  india.py  legacy.py  merge.py  metrics.py  peak_factor.py  trim.py
pysamosa/data_source/: bam.py  era.py  gee.py  ghsl.py  martin.py  pa.py  pr.py  quantaq.py  reg.py  rwi.py  spline_parameters.npz  tropomi.py
pysamosa/spatial_temporal_model/: car_bayes.py  gpr.py  memd.py  model.py  pod.py  qr_pivot.py  reprojection.py  sampling.py
