[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysamosa"
dynamic = ["version"]
description = "A Python library for the SAMOSA project."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["data", "air pollution", "india"]
authors = [
  {name = "Mark Campmier", email = "mark_campmier@berkeley.edu"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "numpy",
  "pandas",

]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/yourusername/pysamosa"
Documentation = "https://pysamosa.readthedocs.io"
Repository = "https://github.com/yourusername/pysamosa.git"
"Bug Tracker" = "https://github.com/yourusername/pysamosa/issues"

[tool.setuptools]
packages = ["pysamosa"]

[tool.setuptools_scm]
write_to = "pysamosa/_version.py"

[tool.pytest.ini_options]
addopts = "--cov=pysamosa"
testpaths = [
  "tests",
]

[tool.coverage.run]
source = ["pysamosa"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88