[build-system]
requires = [ "setuptools>=42", "wheel", "sphinx",]
build-backend = "setuptools.build_meta"

[project]
name = "pysamosa"
version = "0.1.5"
description = "A short description of pysamosa"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = []
[[project.authors]]
name = "Mark Joseph Campmier"
email = "mark_campmier@berkeley.edu"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.berkeley.edu/mark-campmier/pysamosa"
Documentation = "https://pysamosa.readthedocs.io"

[tool.setuptools]
packages = [ "pysamosa",]

[tool.sphinx]
source-dir = "docs"
build-dir = "docs/_build"
config-dir = "docs"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
profile = "black"
