[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysamosa"
version = "0.1.12"
description = "Python toolkit for processing, merging, and modeling multi-source air quality datasets."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "scipy",
    "scikit-learn",
    "geopandas",
    "rioxarray",
    "rasterio",
    "shapely",
    "numba",
    "netcdf4",
    "h5netcdf",
    "matplotlib",
    "cmcrameri",
    "tqdm",
]

[[project.authors]]
name = "Mark Joseph Campmier"
email = "mark_campmier@berkeley.edu"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.berkeley.edu/mark-campmier/pysamosa"
Documentation = "https://pysamosa.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysamosa*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
